HW2/part4/t12.output
running e2c
compiling the C generated code
t12.c: In function ‘main’:
t12.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t12.c:5:1: warning: useless type name in empty declaration
 int ;
 ^
t12.c:6:2: error: expected expression before ‘=’ token
  = 25;
  ^
t12.c:7:2: error: expected expression before ‘=’ token
  = 12;
  ^
t12.c:8:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
